# rbt

./: .gitignore  Cargo.toml  Command.roc  Job.roc  LICENSE  Package-Config.roc  README.md  Rbt.roc  Tool.roc  _typos.toml  build.rs  host.c  main.roc  shell.nix
.github/workflows/: ci.yml
ci/: download_latest_nightly.sh
docs/: principles.md
docs/adrs/: 001-job-isolation-targets.md  001-job-isolation.md  001-layers-of-job-isolation.md  001-the-lowest-common-denominator-of-job-isolation.md  002-dealing-with-home.md  003-standardizing-locale.md  004-symlinking.md  005-build-specification-api.md  005-dynamic-dependencies.md  005-jobs.md  006-caches.md  006-jobs.md  007-caches.md  008-unified-inputs.md  009-os-arch-target.md  010-logs.md  011-capture-stdout-and-stderr.md
docs/internals/: how-we-determine-when-to-run-jobs.md
examples/: .gitignore  BuildElm.roc  ReadSelf.roc
examples/hello/: rbt.roc
examples/roc/: rbt.roc
examples/webassembly/: .gitignore  add.wat  index.js  rbt.roc
nix/: sources.json
platform/: Cargo.toml  Package-Config.roc
platform/src/: lib.rs
src/: bindings.rs  cache.rs  cli.rs  content_hash.rs  coordinator.rs  deps.rs  elm_make.rs  fake_runner.rs  glue.rs  interns.rs  job.rs  lib.rs  main.rs  path_meta_key.rs  rbt.rs  runner.rs  store.rs  workspace.rs
tests/: end_to_end.rs  examples.rs
tests/end_to_end/env/: rbt.roc
tests/end_to_end/env_cleanup/: rbt.roc
tests/end_to_end/file_inputs/: rbt.roc
tests/end_to_end/file_inputs_renaming/: rbt.roc
tests/end_to_end/job_inputs/: rbt.roc
tests/end_to_end/job_inputs_branching/: rbt.roc
tests/fixtures/: alice.txt
