[package]
name = "roc-build"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
clap = { version = "3.2.16", features = ["color", "suggestions", "unstable-v4", "env", "cargo", "derive"] }
digest = "0.10"
itertools = "0.10.3"
libc = "0.2"
notify = "4"
roc_std = { path = "vendor/roc_std" }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sled = "0.34"
tempfile = "3.2"
walkdir = "2.3"
zerocopy = "0.6"

[lib]
name = "host"
crate-type = ["staticlib"]
