[package]
name = "rbt"
version = "0.1.0"
edition = "2021"

links = "app"

[dependencies]
anyhow = "1.0"
blake3 = "1.3.1"
byteorder = "1.4"
clap = { version = "4.0.18", features = ["color", "suggestions", "env", "cargo", "derive"] }
digest = "0.10"
futures = "0.3.25"
itertools = "0.10.3"
libc = "0.2"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_info"] }
notify = "4"
path-absolutize = "3.0.13"
rand = "0.8.5"
roc_std = { path = "vendor/roc_std" }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
simple_logger = { version = "2.2.0", features = ["stderr"] }
sled = "0.34"
tempfile = "3.2"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "process", "fs", "macros", "io-util", "sync"] }
walkdir = "2.3"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
zerocopy = "0.6"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = { version = "2.0.4", features = ["color-auto"] }
